--- a/src/RBDyn/CMakeLists.txt
+++ b/src/RBDyn/CMakeLists.txt
@@ -19,8 +19,8 @@ set_target_properties(RBDyn PROPERTIES CXX_STANDARD 11)
 install(
     TARGETS RBDyn
     EXPORT "${TARGETS_EXPORT_NAME}"
-    LIBRARY DESTINATION "lib"
-    ARCHIVE DESTINATION "lib"
-    RUNTIME DESTINATION "bin"
+    LIBRARY DESTINATION "${CMAKE_INSTALL_LIBDIR}"
+    ARCHIVE DESTINATION "${CMAKE_INSTALL_LIBDIR}"
+    RUNTIME DESTINATION "${CMAKE_INSTALL_BINDIR}"
 )
 install(FILES ${HEADERS} DESTINATION ${INCLUDE_INSTALL_DESTINATION})
