--- a/debian/control
+++ b/debian/control
@@ -21,11 +21,13 @@ Build-Depends: debhelper (>= 9),
  python-all,
  python-dev,
  python-nose,
+ python-pytest,
  python-setuptools,
  cython,
  python3-all,
  python3-dev,
  python3-nose,
+ python3-pytest,
  python3-setuptools,
  cython3,
  python-spacevecalg,
