[pre-commit] Setup pre-commit
Remove the clang-format scripts since this is now handled by pre-commit

--- a/tests/CMakeLists.txt
+++ b/tests/CMakeLists.txt
@@ -11,8 +11,12 @@ set(HEADERS XXXarm.h XYZarm.h XYZSarm.h Tree30Dof.h SSSarm.h)
 macro(addUnitTest name)
   if(${BUILD_TESTING})
     add_executable(${name} ${name}.cpp ${HEADERS})
-    target_link_libraries(${name} PRIVATE RBDyn Boost::unit_test_framework Boost::system Boost::filesystem Boost::disable_autolinking)
-    target_compile_definitions(${name} PRIVATE -DBOOST_TEST_DYN_LINK -DTESTS_DATA_DIR="${CMAKE_CURRENT_SOURCE_DIR}")
+    target_link_libraries(
+      ${name} PRIVATE RBDyn Boost::unit_test_framework Boost::system
+                      Boost::filesystem Boost::disable_autolinking)
+    target_compile_definitions(
+      ${name} PRIVATE -DBOOST_TEST_DYN_LINK
+                      -DTESTS_DATA_DIR="${CMAKE_CURRENT_SOURCE_DIR}")
     add_test(${name}Unit ${name})
     # Adding a project configuration file (for MSVC only)
     generate_msvc_dot_user_file(${name})
@@ -22,8 +26,12 @@ endmacro(addUnitTest)
 macro(addParserUnitTest name)
   if(${BUILD_TESTING} AND ${BUILD_RBDYN_PARSERS})
     add_executable(${name} ${name}.cpp ${HEADERS})
-    target_link_libraries(${name} PRIVATE RBDynParsers Boost::unit_test_framework Boost::system Boost::filesystem Boost::disable_autolinking)
-    target_compile_definitions(${name} PRIVATE -DBOOST_TEST_DYN_LINK -DTESTS_DATA_DIR="${CMAKE_CURRENT_SOURCE_DIR}")
+    target_link_libraries(
+      ${name} PRIVATE RBDynParsers Boost::unit_test_framework Boost::system
+                      Boost::filesystem Boost::disable_autolinking)
+    target_compile_definitions(
+      ${name} PRIVATE -DBOOST_TEST_DYN_LINK
+                      -DTESTS_DATA_DIR="${CMAKE_CURRENT_SOURCE_DIR}")
     add_test(${name}Unit ${name})
     # Adding a project configuration file (for MSVC only)
     generate_msvc_dot_user_file(${name})
@@ -37,30 +45,31 @@ macro(addBenchmark name)
   generate_msvc_dot_user_file(${name})
 endmacro(addBenchmark)
 
-addUnitTest("BodyTest")
-addUnitTest("JointTest")
-addUnitTest("MultiBodyTest")
-addUnitTest("AlgoTest")
-addUnitTest("JacobianTest")
-addUnitTest("DynamicsTest")
-addUnitTest("CoMTest")
-addUnitTest("MomentumTest")
-addUnitTest("IDIMTest")
-addUnitTest("InverseStaticsTest")
-addUnitTest("IntegrationTest")
-addUnitTest("ExpandTest")
-addUnitTest("CoriolisTest")
-addParserUnitTest("URDFParserTest")
-addParserUnitTest("URDFOutputTest")
-addParserUnitTest("YAMLParserTest")
-addParserUnitTest("YAMLOutputTest")
+addunittest("BodyTest")
+addunittest("JointTest")
+addunittest("MultiBodyTest")
+addunittest("AlgoTest")
+addunittest("JacobianTest")
+addunittest("DynamicsTest")
+addunittest("CoMTest")
+addunittest("MomentumTest")
+addunittest("IDIMTest")
+addunittest("InverseStaticsTest")
+addunittest("IntegrationTest")
+addunittest("ExpandTest")
+addunittest("CoriolisTest")
+addparserunittest("URDFParserTest")
+addparserunittest("URDFOutputTest")
+addparserunittest("YAMLParserTest")
+addparserunittest("YAMLOutputTest")
 
 if(${BENCHMARKS})
-  option(BENCHMARK_ENABLE_TESTING "Enable testing of the benchmark library." OFF)
+  option(BENCHMARK_ENABLE_TESTING "Enable testing of the benchmark library."
+         OFF)
   if(NOT WIN32)
     add_definitions(-Wno-error)
   endif()
   add_subdirectory(benchmark EXCLUDE_FROM_ALL)
-  addBenchmark("JacobianBench")
-  addBenchmark("DynamicsBench")
+  addbenchmark("JacobianBench")
+  addbenchmark("DynamicsBench")
 endif()
