--- a/.github/workflows/package.yml
+++ b/.github/workflows/package.yml
@@ -21,6 +21,7 @@ jobs:
     uses: jrl-umi3218/github-actions/.github/workflows/package-project.yml@master
     with:
       deps: '["jrl-umi3218/Tasks"]'
+      latest-cmake: true
     secrets:
       CLOUDSMITH_API_KEY: ${{ secrets.CLOUDSMITH_API_KEY }}
       GH_TOKEN: ${{ secrets.GH_PAGES_TOKEN }}
