[ci] Package for Ubuntu jammy

--- a/.github/workflows/package.yml
+++ b/.github/workflows/package.yml
@@ -22,6 +22,15 @@ jobs:
     with:
       deps: '["jrl-umi3218/Tasks"]'
       latest-cmake: true
+      matrix: |
+          {
+            "dist": ["bionic", "focal", "jammy"],
+            "arch": ["amd64"],
+            "include":
+            [
+              {"dist": "bionic", "arch": "i386" }
+            ]
+          }
     secrets:
       CLOUDSMITH_API_KEY: ${{ secrets.CLOUDSMITH_API_KEY }}
       GH_TOKEN: ${{ secrets.GH_PAGES_TOKEN }}
