--- a/debian/control
+++ b/debian/control
@@ -23,7 +23,7 @@ Build-Depends: debhelper (>= 9),
 #PYTHON2  python-pytest,
 #PYTHON2  python-setuptools,
 #PYTHON2  cython,
- python-spacevecalg,
+#PYTHON2  python-spacevecalg,
  python3-all,
  python3-dev,
  python3-pytest,
