add CXX_DISABLE_ERROR as in SpaceVecAlg to bypass Eigen error

--- a/CMakeLists.txt
+++ b/CMakeLists.txt
@@ -24,6 +24,7 @@ include(cmake/base.cmake)
 include(cmake/cython/cython.cmake)
 include(cmake/msvc-specific.cmake)
 
+set(CXX_DISABLE_WERROR True)
 project(
   RBDyn
   LANGUAGES C CXX
