--- a/tests/CMakeLists.txt
+++ b/tests/CMakeLists.txt
@@ -4,7 +4,7 @@
 
 enable_testing()
 
-find_package(Boost REQUIRED COMPONENTS unit_test_framework system filesystem)
+find_package(Boost REQUIRED COMPONENTS unit_test_framework filesystem)
 
 set(HEADERS XXXarm.h XYZarm.h XYZSarm.h Tree30Dof.h SSSarm.h)
 
@@ -12,8 +12,8 @@ macro(addUnitTest name)
   if(${BUILD_TESTING})
     add_executable(${name} ${name}.cpp ${HEADERS})
     target_link_libraries(
-      ${name} PRIVATE RBDyn Boost::unit_test_framework Boost::system
-                      Boost::filesystem Boost::disable_autolinking)
+      ${name} PRIVATE RBDyn Boost::unit_test_framework Boost::filesystem
+                      Boost::disable_autolinking)
     target_compile_definitions(
       ${name} PRIVATE -DBOOST_TEST_DYN_LINK
                       -DTESTS_DATA_DIR="${CMAKE_CURRENT_SOURCE_DIR}")
@@ -27,8 +27,8 @@ macro(addParserUnitTest name)
   if(${BUILD_TESTING} AND ${BUILD_RBDYN_PARSERS})
     add_executable(${name} ${name}.cpp ${HEADERS})
     target_link_libraries(
-      ${name} PRIVATE RBDynParsers Boost::unit_test_framework Boost::system
-                      Boost::filesystem Boost::disable_autolinking)
+      ${name} PRIVATE RBDynParsers Boost::unit_test_framework Boost::filesystem
+                      Boost::disable_autolinking)
     target_compile_definitions(
       ${name} PRIVATE -DBOOST_TEST_DYN_LINK
                       -DTESTS_DATA_DIR="${CMAKE_CURRENT_SOURCE_DIR}")
